# Semantic_Traversability

./: allfiles.txt  train.py  train_rellis.py
Traversability/include/: traversabilityGrid.h
Traversability/launch/: traversability_launch.py
Traversability/src/: traversabilityGrid.cpp  traversability_node.cpp
bisenetv2_ros/: README.txt  convert_to_torchscript.py  create_rellis_split.py  create_rugd_split.py  package.xml  setup.cfg  setup.py  train.py
bisenetv2_ros/bisenetv2_ros/: __init__.py  bisenetv2_node.py
bisenetv2_ros/launch/: bisenetv2_launch.py
fusion_node/fusion_node/: fusion_node.py
fusion_node/launch/: fusion_launch.py
fusion_node_rellis_sans_odom/: setup.py
fusion_node_rellis_sans_odom/fusion_node/: __init__.py  fusion_node.py
fusion_node_sans_odom/: package.xml  setup.py
fusion_node_sans_odom/fusion_node/: fusion_node.py
kitti_player/: package.xml  setup.cfg  setup.py
kitti_player/kitti_player/: __init__.py  kitti_player_node.py
kitti_player/launch/: kitti_player_launch.py
rellis_player/: package.xml  setup.cfg  setup.py
rellis_player/launch/: rellis_player_launch.py
rellis_player/rellis_player/: rellis_player_node.py
