<?xml version="1.0"?>
<package format="3">
  <name>bisenetv2_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 package for BiSeNetV2 inference</description>
  <maintainer email="ton.email@example.com">TonNom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

