<?xml version="1.0"?>
<package format="3">
  <name>fusion_node</name>
  <version>0.0.1</version>
  <description>Fusion LiDAR + segmentation</description>
  <maintainer email="ton@email.com">TonNom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
