<?xml version="1.0"?>
<package format="3">
  <name>kitti_player</name>
  <version>0.1.0</version>
  <description>Node to play KITTI dataset (LiDAR + images) for ROS2</description>

  <maintainer email="ton.email@example.com">Ton Nom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>

